--- a/src/components/clock/clock.css
+++ b/src/components/clock/clock.css
@@ -14,9 +14,14 @@
   font-weight: 500;
   font-style: normal;
   font-size: 2em;
-  margin: 0;
+  /* margin: 0; */
 }
-
+.clock-display{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
 .clock{
   font-family: "Jacquarda Bastarda 9", sans-serif;
   font-weight: 400;
@@ -46,4 +51,18 @@
   border: none;
   background: transparent;
   font-size: 100px;
+}
+
+@media (max-width: 600px){
+  .clock-container{
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+  }
+  .clock{
+    font-size: 60px;
+    width: 120px;
+  }
+  .length-buttons{
+    font-size: 50px;
+  }
 }
