CHORE: Change button background color for better visibility

--- a/src/components/clock/clock.css
+++ b/src/components/clock/clock.css
@@ -46,6 +46,11 @@
   margin: 0 auto;
 }
 
+.control-buttons button{
+  background-color: red;
+  color: white;
+}
+
 .length-buttons{
   padding: 0;
   border: none;
