--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -89,8 +89,10 @@
   line-height: 1;
   cursor: pointer;
 }
+
 .task-remove{
     width: 20px;
     height: 20px;
     fill: red;
+    cursor: pointer;
 }
