--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  padding: 40px;
   text-align: center;
   height: 100%;
 }
@@ -19,14 +19,14 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-.content{
+.content {
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 2fr 6fr 2fr;
-  gap: 8px;
+  gap: 19px;
   height: 90vh;
-  min-height: 0;  /* NEW */
-  min-width: 0;   /* NEW; needed for Firefox */
+  min-height: 0; /* NEW */
+  min-width: 0; /* NEW; needed for Firefox */
 }
 
 .links {
@@ -34,24 +34,26 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 30px;
-  padding: 1em;
+  height: 80%;
+  margin: 80px 0;
+  gap: 20px;
   overflow: hidden;
 }
 
-.links.animate{
+.links.animate {
   animation: slide-in 1s;
 }
 
-.link{
+.link {
   text-decoration: none;
   color: black;
   font-size: 1.5em;
   font-weight: 500;
   transition: color 300ms, font-size 300ms, text-decoration 300ms;
+  height: 40px;
 }
 
-.link:hover{
+.link:hover {
   font-size: 2em;
   transition: font-size 300ms, text-decoration 300ms;
   text-decoration: underline;
@@ -66,19 +68,24 @@
     transform: translateX(0%);
     opacity: 1;
   }
-  
 }
 
-.header{
+.header {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height:100%;
+  height: 100%;
   position: relative;
+  /* background-image: radial-gradient(
+    circle at center,
+    black 0% 5%,
+    #00000000 60% 100%
+  );
+  background-size: 100% 100%; */
 }
 
-.header-text{
+.header-text {
   font-size: 300px;
   margin: 0;
   color: black;
@@ -87,7 +94,7 @@
   z-index: 3;
 }
 
-.header-text-background{
+.header-text-background {
   font-size: 300px;
   margin: 0;
   -webkit-text-stroke-width: 2px;
@@ -99,7 +106,7 @@
   will-change: transform;
 }
 
-.header-text-background.base{
+.header-text-background.base {
   animation: none !important;
 }
 
@@ -114,34 +121,34 @@
   }
 }
 
-@media (max-width: 600px){
-  .content{
+@media (max-width: 600px) {
+  .content {
     height: auto;
     grid-template-rows: 0.5fr 0.5fr 1fr;
     grid-template-columns: 1fr;
 
     justify-content: flex-start;
   }
-  .links{
+  .links {
     gap: 20px;
     flex-wrap: wrap;
     flex-direction: row;
     height: fit-content;
     align-self: center;
   }
-  .link{
+  .link {
     display: flex;
   }
-  .header{
+  .header {
     height: auto;
     justify-content: flex-start;
     align-items: center;
     justify-content: center;
   }
-  .header-text{
+  .header-text {
     font-size: 150px;
   }
-  .header-text-background{
+  .header-text-background {
     display: none;
   }
 }
