--- a/src/components/clock/clock.css
+++ b/src/components/clock/clock.css
@@ -1,28 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-.clock-container{
+.clock-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
-  gap: 30px;
+  gap: 20px;
 }
 
-.clock-header{
+.clock-header {
   font-family: "Staatliches", sans-serif;
   font-weight: 500;
   font-style: normal;
   font-size: 2em;
-  /* margin: 0; */
+  margin: 5px 0 0 0;
+  height: 40px;
 }
-.clock-display{
+.clock-display {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 20px;
 }
-.clock{
+.clock {
   font-family: "Jacquarda Bastarda 9", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -38,7 +39,7 @@
   width: 180px;
 }
 
-.control-buttons{
+.control-buttons {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -46,28 +47,28 @@
   margin: 0 auto;
 }
 
-.control-buttons button{
+.control-buttons button {
   background-color: red;
   color: white;
 }
 
-.length-buttons{
+.length-buttons {
   padding: 0;
   border: none;
   background: transparent;
   font-size: 100px;
 }
 
-@media (max-width: 600px){
-  .clock-container{
+@media (max-width: 600px) {
+  .clock-container {
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr;
   }
-  .clock{
+  .clock {
     font-size: 60px;
     width: 120px;
   }
-  .length-buttons{
+  .length-buttons {
     font-size: 50px;
   }
 }
