--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -17,10 +17,13 @@ li {
 .tab {
   cursor: pointer;
   font-size: 1.3em;
+  margin: auto;
+  user-select: none;
 }
 
 .tab.selected {
   text-decoration: underline;
   text-decoration-thickness: 0.1em;
   transition: color 300ms;
+  cursor: default;
 }
