--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
   grid-template-rows: 1fr;
   grid-template-columns: 2fr 6fr 2fr;
   gap: 19px;
-  height: 90vh;
+  height: 85vh;
   min-height: 0; /* NEW */
   min-width: 0; /* NEW; needed for Firefox */
 }
@@ -34,19 +34,20 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 80%;
-  margin: 80px 0;
-  gap: 20px;
+  height: 100%;
+  gap: 40px;
   overflow: hidden;
 }
 
 .link {
+  display: block;
+  text-align: center;
   text-decoration: none;
   color: black;
   font-size: 1.5em;
   font-weight: 500;
   transition: color 300ms, transform 300ms, text-decoration 300ms;
-  height: 40px;
+  line-height: 40px;
   animation: slide-in calc(0.5s + (1s * var(--delay)));
   will-change: color font-size text-decoration transform opacity;
 }
