--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
   margin: 0 auto;
   padding: 40px;
   text-align: center;
-  height: 100%;
+  height: 100vh;
+  box-sizing: border-box;
 
   --header-size: 400px;
 }
@@ -25,8 +26,10 @@
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 2fr 6fr 2fr;
-  gap: 19px;
-  height: 85vh;
+  gap: 0px 19px;
+  /* height: 85vh; */
+  height: calc(85vh - mod(85vh, 40px));
+  /* max-height: 840px; */
   min-height: 0; /* NEW */
   min-width: 0; /* NEW; needed for Firefox */
 }
