--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,15 @@
   height: 100vh;
   box-sizing: border-box;
 
-  --header-size: 400px;
+  --header-size: 45rem;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  overflow: hidden;
 }
 
 .logo {
@@ -49,7 +57,7 @@
   text-align: center;
   text-decoration: none;
   color: black;
-  font-size: 1.5em;
+  font-size: 3rem;
   font-weight: 500;
   transition: color 300ms, transform 300ms, text-decoration 300ms;
   line-height: 40px;
