--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -15,7 +15,7 @@
   font-family: "Staatliches", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 2em;
+  font-size: 3.5rem;
   margin: 0;
 }
 
@@ -41,6 +41,7 @@
   border-radius: 5px;
   background-color: var(--black);
   box-sizing: border-box;
+  font-size: 2rem;
 }
 
 .task-top {
