--- a/src/components/clock/clock.css
+++ b/src/components/clock/clock.css
@@ -13,7 +13,7 @@
   font-family: "Staatliches", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 2em;
+  font-size: 4em;
   margin: 5px 0 0 0;
   height: 40px;
 }
@@ -45,6 +45,7 @@
   justify-content: space-between;
   width: 60%;
   margin: 0 auto;
+  font-size: 1.5rem;
 }
 
 .control-buttons button {
@@ -56,7 +57,7 @@
   padding: 0;
   border: none;
   background: transparent;
-  font-size: 100px;
+  font-size: 6rem;
 }
 
 @media (max-width: 600px) {
